[FIXED]: SETTING PAGE :: pagination design :: added collapse

--- a/src/scss/themes/_setting.scss
+++ b/src/scss/themes/_setting.scss
@@ -278,6 +278,24 @@ table.delivery-warehouse-edit-table{
 	}
 }
 
+.setting-modal-page{
+	nav.py-3{
+		border-top: 1px solid #f2f2f2;
+	}
+	.pagination{
+		li{
+			a{
+				&.previous, &.active, &.next{
+					border: 1px solid $dark;
+				}
+				&:hover{
+					border: 1px solid $dark;
+				}
+			}
+		}
+	}
+}
+
 .setting-pagi{
 	.pagination a.previous, .pagination a.next, .pagination a.active {
 	    border: 0 !important;
